# forge-reflect

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  INSTALL.md  Makefile  README.md  VERIFY.md  config.json  config.yaml  defaults.yaml  module.yaml
.claude-plugin/: plugin.json
.opencode/plugins/: forge-reflect.ts
commands/: insight.md  reflect.md
hooks/: PostToolUse.sh  PreCompact.sh  SessionStart.sh  Stop.sh  hooks.json  pre-compact.sh  reflect-wrapper.sh  session-start.sh  skill-load.sh  stop-wrapper.sh  stop.sh
rules/: ContextKeeper.md  HookScripts.md  InsightMarkers.md
skills/ContextKeeper/: SKILL.md  SKILL.yaml
skills/InsightCheck/: SKILL.md  SKILL.yaml
skills/MemoryCapture/: SKILL.md
skills/MemoryHarvest/: SKILL.md
skills/MemoryIdea/: SKILL.md  Template.md
skills/MemoryImperative/: SKILL.md  Template.md
skills/MemoryInsight/: SKILL.md  Template.md
skills/MemoryInsights/: SKILL.md
skills/MemoryInsights/Templates/: .mdschema  Idea.md  Imperative.md  Insight.md
skills/MemoryInvariant/: SKILL.md  Template.md
skills/MemoryPromote/: SKILL.md
skills/MemoryReview/: SKILL.md
skills/ModuleArchitect/: SKILL.md  SKILL.yaml
skills/SessionReflect/: SKILL.md  SKILL.yaml
skills/Surface/: Hook.md  SKILL.md
skills/insight/: SKILL.md
skills/reflect/: SKILL.md
src/: lib.rs
src/config/: mod.rs  tests.rs
src/prompt/: mod.rs  tests.rs
src/surface/: mod.rs  tests.rs
src/transcript/: mod.rs  tests.rs
