[package]
name = "forge-reflect"
version = "0.2.0"
edition = "2021"

[lib]
name = "forge_reflect"
path = "src/lib.rs"

[[bin]]
name = "insight"
path = "src/bin/insight.rs"

[[bin]]
name = "reflect"
path = "src/bin/reflect.rs"

[[bin]]
name = "surface"
path = "src/bin/surface.rs"

[dependencies]
forge-core = { path = "../../Core" }
chrono = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_yaml = "0.9"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
strip = true
lto = true
